--- a/app/views/admin/products/_form.html.slim
+++ b/app/views/admin/products/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with(model: product) do |form|
+= form_for [:admin, @product], html: {'data-controller' => 'validate', turbo: false, "data-form": "data-form"} do |form|
   - if product.errors.any?
     div style="color: red"
       h2 = "#{pluralize(product.errors.count, "error")} prohibited this product from being saved:"
