--- a/app/views/admin/products/show.html.slim
+++ b/app/views/admin/products/show.html.slim
@@ -11,8 +11,8 @@ p =< @product.description
 
 
 div
-  => link_to "Edit this product", edit_product_path(@product)
+  => link_to "Edit this product", edit_admin_product_path(@product)
   '|
-  =< link_to "Back to products", products_path
+  =< link_to "Back to products", admin_products_path
 
-  = button_to "Destroy this product", @product, method: :delete
+  = button_to "Destroy this product", admin_product_path(@product), method: :delete
