add orders in admin and polish ui

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -1,5 +1,17 @@
-h1 This is Admin Dashboard
+.container.mt-4
+      h1.text-center This is Admin Dashboard
 
-= link_to "Product", admin_products_path
-br
-= link_to "Orders", admin_orders_path
+      .row
+        .col-md-6
+          .card
+            .card-body
+              h4.card-title Products
+              p Manage all your products here.
+              = link_to "View Products", admin_products_path, class: 'btn btn-primary'
+
+        .col-md-6
+          .card
+            .card-body
+              h4.card-title Orders
+              p Manage all your orders here.
+              = link_to "View Orders", admin_orders_path, class: 'btn btn-primary'
