--- a/app/views/user/wallet/new.html.slim
+++ b/app/views/user/wallet/new.html.slim
@@ -1,9 +1,13 @@
-h1 Create a Wallet
+.container.mt-4
+  .row.justify-content-center
+    .col-md-6
+      .card
+        .card-header
+          h1.text-center Create a Wallet
+        .card-body
+          = form_with(model: @wallet, url: user_wallet_index_path, method: :post, local: true) do |f|
+            .mb-3
+              = f.label :balance, 'Initial Balance', class: 'form-label'
+              = f.number_field :balance, step: '0.01', class: 'form-control', min: '0'
 
-= form_with(model: @wallet, url: user_wallet_index_path, method: :post, local: true) do |f|
-  .form-group
-    = f.label :balance, 'Initial Balance'
-    = f.number_field :balance, step: '0.01', class: 'form-control', min: '0'
-
-  .form-group
-    = f.submit 'Create Wallet', class: 'btn btn-primary'
+            = f.submit 'Create Wallet', class: 'btn btn-primary btn-lg'
