--- a/app/views/admin/orders/index.html.slim
+++ b/app/views/admin/orders/index.html.slim
@@ -1,7 +1,14 @@
-h1 This is Order Dashboard
+.container.mt-4
+  h1.text-center This is Order Dashboard
 
-- @orders.each do |order|
-  p Order for #{order.user.email}
-  p = order.total
-  = link_to "view order", admin_order_path(order)
-  hr
+  - @orders.each do |order|
+    .card.mb-3
+      .card-body
+        h5.card-title Order for #{order.user.email}
+        p.card-text
+          strong Total:
+          = number_to_currency(order.total, unit: '₱')
+          /# Assuming PHP as the currency
+        .d-flex.justify-content-between
+          = link_to "View Order", admin_order_path(order), class: 'btn btn-primary'
+    hr
