--- a/app/views/admin/products/_form.html.slim
+++ b/app/views/admin/products/_form.html.slim
@@ -1,20 +1,20 @@
-= form_for [:admin, @product], html: {'data-controller' => 'validate', turbo: false, "data-form": "data-form"} do |form|
-  - if product.errors.any?
-    div style="color: red"
-      h2 = "#{pluralize(product.errors.count, "error")} prohibited this product from being saved:"
+= form_for [:admin, @product], html: { 'data-controller' => 'validate', turbo: false, "data-form" => "data-form" } do |form|
+  - if @product.errors.any?
+    .alert.alert-danger
+      h2 = "#{pluralize(@product.errors.count, 'error')} prohibited this product from being saved:"
       ul
-        - product.errors.each do |error|
-          li = error.full_message
+        - @product.errors.full_messages.each do |message|
+          li = message
 
-  div
-    = form.label :name, style: "display: block"
-    = form.text_field :name
+  .mb-3
+    = form.label :name, class: 'form-label'
+    = form.text_field :name, class: 'form-control'
 
-  div
-    = form.label :description, style: "display: block"
-    = form.text_area :description
+  .mb-3
+    = form.label :description, class: 'form-label'
+    = form.text_area :description, class: 'form-control'
 
-  div data-controller="nested-form" data-nested-form-index-value="PRODUCT_VARIANT_RECORD"
+  div class="mb-3" data-controller="nested-form" data-nested-form-index-value="PRODUCT_VARIANT_RECORD"
     template data-nested-form-target="template"
       = form.fields_for :product_variants, ProductVariant.new, child_index: 'PRODUCT_VARIANT_RECORD' do |variant|
         = render 'product_variant_fields', form: variant
@@ -23,9 +23,8 @@
       = render 'product_variant_fields', form: existing_variant
 
     div data-nested-form-target="add_item"
-      = link_to "Add Variant", '#', data: { action: 'nested-form#add_association' }
+      = link_to "Add Variant", '#', data: { action: 'nested-form#add_association' }, class: 'btn btn-primary'
 
-  br/
-  br/
-  div class="actions"
-    = form.submit
+  .mt-4
+    .d-flex.justify-content-end
+      = form.submit 'Save', class: 'btn btn-primary'
