--- a/app/views/admin/products/_product.html.slim
+++ b/app/views/admin/products/_product.html.slim
@@ -1,7 +1,11 @@
 div id="#{dom_id product}"
-  p
-    strong Name:
-    =< product.name
-  p
-    strong Description:
-    =< product.description
+  .mb-2
+    p
+      strong Name:
+      = product.name
+
+  .mb-2
+    p
+      strong Description:
+      = product.description
+
