--- a/app/views/admin/products/index.html.slim
+++ b/app/views/admin/products/index.html.slim
@@ -1,10 +1,14 @@
-p style="color: green" = notice
+.container.mt-4
+  h1 Products
 
-h1 Products
-
-#products
-  - @products.each do |product|
-    == render product
-    p
-      = link_to "Show this product", admin_product_path(product)
-= link_to "New product", new_admin_product_path
+  .row
+    - @products.each do |product|
+      .col-md-4.mb-4
+        .card
+          .card-body.p-4
+            = render product
+            .mt-3
+              p
+                = link_to "Show this product", admin_product_path(product), class: 'btn btn-primary'
+  .mt-4
+    = link_to "New Product", new_admin_product_path, class: 'btn btn-success'
