--- a/app/views/admin/products/new.html.slim
+++ b/app/views/admin/products/new.html.slim
@@ -1,8 +1,9 @@
-h1 New product
+.container.mt-4
+  h1.mb-4 New Product
 
-== render "form", product: @product
+  .card.shadow-sm
+    .card-body.p-4
+      == render "form", product: @product
 
-br
-
-div
-  = link_to "Back to products", admin_products_path
+  .mt-4
+    = link_to "Back to Products", admin_products_path, class: 'btn btn-secondary'
