--- a/app/views/user/registrations/edit.html.erb
+++ b/app/views/user/registrations/edit.html.erb
@@ -1,32 +1,38 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+<div class="d-flex flex-column align-items-center my-4">
+  <div class="w-100" style="max-width: 600px;">
+    <h2 class="text-center mb-4">My Profile</h2>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'needs-validation' }) do |f| %>
+      <div class="mb-3">
+        <%= f.label :email, class: "form-label" %>
+        <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", required: true %>
+      </div>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div class="alert alert-warning">
+          Currently waiting confirmation for: <%= resource.unconfirmed_email %>
+        </div>
+      <% end %>
+      <div class="mb-3">
+        <%= f.label :password, class: "form-label" %>
+        <i>(leave blank if you don't want to change it)</i>
+        <%= f.password_field :password, class: "form-control", autocomplete: "new-password" %>
+        <% if @minimum_password_length %>
+          <div class="form-text">
+            <em><%= @minimum_password_length %> characters minimum</em>
+          </div>
+        <% end %>
+      </div>
+      <div class="mb-3">
+        <%= f.label :password_confirmation, class: "form-label" %>
+        <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
+      </div>
+      <div class="mb-3">
+        <%= f.label :current_password, class: "form-label" %>
+        <i>(we need your current password to confirm your changes)</i>
+        <%= f.password_field :current_password, class: "form-control", autocomplete: "current-password" %>
+      </div>
+      <div class="d-grid">
+        <%= f.submit "Save", class: "btn btn-primary" %>
+      </div>
     <% end %>
   </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-<h3>Cancel my account</h3>
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-<%= link_to "Back", :back %>
+</div>
