--- a/app/views/user/wallet/new_cash_in.html.slim
+++ b/app/views/user/wallet/new_cash_in.html.slim
@@ -1,8 +1,13 @@
-h1 Cash in
-= form_with(model: @wallet, url: cash_in_user_wallet_path(@wallet), method: :patch, local: true) do |f|
-  .form-group
-    = f.label :amount, 'Amount to Add'
-    = f.number_field :amount, step: '0.01', class: 'form-control', min: '0'
+.container.mt-4
+  .row.justify-content-center
+    .col-md-6
+      .card
+        .card-header
+          h1.text-center Cash In
+        .card-body
+          = form_with(model: @wallet, url: cash_in_user_wallet_path(@wallet), method: :patch, local: true) do |f|
+            .mb-3
+              = f.label :amount, 'Amount to Add', class: 'form-label'
+              = f.number_field :amount, step: '0.01', class: 'form-control', min: '0'
 
-  .form-group
-    = f.submit 'Add Funds', class: 'btn btn-primary'
+            = f.submit 'Add Funds', class: 'btn btn-primary btn-lg'
