--- a/app/views/admin/products/_product.html.slim
+++ b/app/views/admin/products/_product.html.slim
@@ -2,10 +2,10 @@ div id="#{dom_id product}"
   .mb-2
     p
       strong Name:
-      = product.name
+      =< product.name
 
   .mb-2
     p
       strong Description:
-      = product.description
+      =< product.description
 
