--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -13,6 +13,18 @@ html lang="en"
     = javascript_importmap_tags
 
   body
+    .navbar.navbar-expand-lg.navbar-light.bg-light
+      .container
+        = link_to 'Admin Dashboard', admin_products_path, class: 'navbar-brand'
+        button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
+          span.navbar-toggler-icon
+
+        .collapse.navbar-collapse#navbarNav
+          .navbar-nav
+            = link_to 'Products', admin_products_path, class: 'nav-item nav-link'
+            = link_to 'Orders', admin_orders_path, class: 'nav-item nav-link'
+
+
     .container
       - flash.each do |key, message|
         - flash_class = key == 'notice' ? 'alert-info' : 'alert-danger'
