--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -24,12 +24,14 @@ html lang="en"
             = link_to 'Products', admin_products_path, class: 'nav-item nav-link'
             = link_to 'Orders', admin_orders_path, class: 'nav-item nav-link'
 
-
     .container
-      - flash.each do |key, message|
-        - flash_class = key == 'notice' ? 'alert-info' : 'alert-danger'
-        .alert{class: flash_class}
-          = message
+      - if notice
+        .alert.alert-success
+          = notice
+      - if alert
+        .alert.alert-danger
+          = alert
+
     main
       =yield
     script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
