add pagy and additional fields for user

--- a/app/views/admin/orders/edit.html.slim
+++ b/app/views/admin/orders/edit.html.slim
@@ -29,6 +29,12 @@
                     strong Description:
                     =< item.product.description
                   p
+                    strong Color:
+                    =< item.product_variant.color
+                  p
+                    strong Size:
+                    =< item.product_variant.size
+                  p
                     strong Quantity:
                     =< item.quantity
                   p
