--- a/app/views/user/registrations/edit.html.erb
+++ b/app/views/user/registrations/edit.html.erb
@@ -6,6 +6,18 @@
         <%= f.label :email, class: "form-label" %>
         <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", required: true %>
       </div>
+      <div class="mb-3">
+        <%= f.label :first_name, class: "form-label" %>
+        <%= f.text_field :first_name, class: "form-control" %>
+      </div>
+      <div class="mb-3">
+        <%= f.label :last_name, class: "form-label" %>
+        <%= f.text_field :last_name, class: "form-control" %>
+      </div>
+      <div class="mb-3">
+        <%= f.label :address, class: "form-label" %>
+        <%= f.text_field :address, class: "form-control" %>
+      </div>
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div class="alert alert-warning">
           Currently waiting confirmation for: <%= resource.unconfirmed_email %>
