--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -8,6 +8,18 @@
         <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", required: true %>
       </div>
       <div class="mb-3">
+        <%= f.label :first_name, class: "form-label" %>
+        <%= f.text_field :first_name, class: "form-control" %>
+      </div>
+      <div class="mb-3">
+        <%= f.label :last_name, class: "form-label" %>
+        <%= f.text_field :last_name, class: "form-control" %>
+      </div>
+      <div class="mb-3">
+        <%= f.label :address, class: "form-label" %>
+        <%= f.text_field :address, class: "form-control" %>
+      </div>
+      <div class="mb-3">
         <%= f.label :password, class: "form-label" %>
         <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
