--- a/app/views/admin/products/_form.html.slim
+++ b/app/views/admin/products/_form.html.slim
@@ -1,9 +1,9 @@
-= form_for [:admin, @product], html: {'data-controller' => 'validate', turbo: false, "data-form": "data-form"} do |form|
-  - if @product.errors.any?
+= form_for [:admin, product], html: {'data-controller' => 'validate', turbo: false, "data-form": "data-form"} do |form|
+  - if product.errors.any?
     .alert.alert-danger
-      h2 = "#{pluralize(@product.errors.count, 'error')} prohibited this product from being saved:"
+      h2 = "#{pluralize(product.errors.count, 'error')} prohibited this product from being saved:"
       ul
-        - @product.errors.each do |error|
+        - product.errors.each do |error|
           li = error.full_message
 
   .mb-3
